tests/ui/async-await/issues/issue-63388-1.stderr
error[E0621]: explicit lifetime required in the type of `foo`
  --> $DIR/issue-63388-1.rs:14:9
   |
LL |         &'a self, foo: &dyn Foo
   |                        -------- help: add explicit lifetime `'a` to the type of `foo`: `&'a (dyn Foo + 'a)`
...
LL |         foo
   |         ^^^ lifetime `'a` required

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
